--- a/src/School/UserBundle/Resources/views/Admin/StudentRemovalSelection.html.twig
+++ b/src/School/UserBundle/Resources/views/Admin/StudentRemovalSelection.html.twig
@@ -10,7 +10,9 @@
 {% block body %}
 {{ parent() }}
 <div class="container-fluid">
-    <h2> Remove students from class </h2> <br/>
+    <div class="page-header">
+        <h2> Remove students from class </h2>
+    </div>
     
     <h4> Selected Students to be removed </h4>
     
