--- a/src/School/UserBundle/Resources/views/Teacher/AddAssignedExam.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/AddAssignedExam.html.twig
@@ -16,8 +16,9 @@
 
 {% block body %}
 <div class="container-fluid">
-    
-    <h3> Exam assignment </h3>
+    <div class="page-header">
+        <h2> Exam assignment </h2>
+    </div>
     
     <ul>
         <li> Exam: {{ exam.name }} </li>
