--- a/src/School/UserBundle/Resources/views/Teacher/EditAssignedExam.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/EditAssignedExam.html.twig
@@ -16,8 +16,9 @@
 
 {% block body %}
 <div class="container-fluid">
-    
-    <h3> Edit Exam dates </h3>
+    <div class="page-header">
+        <h2> Edit Exam dates </h2>
+    </div>
     
     
     {{ form_start(form) }}
