--- a/src/School/UserBundle/Resources/views/Admin/Alerts.html.twig
+++ b/src/School/UserBundle/Resources/views/Admin/Alerts.html.twig
@@ -5,12 +5,10 @@
 {% block body %} 
 {{ parent() }}
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-md-8">
-            <h2> Alerts </h2>
-        </div>
+
+    <div class="page-header">
+        <h2> Alerts </h2>
     </div>
-    
 
         {% if users is empty %}
             <div class="well"> You have no alerts at the moment! </div>
@@ -42,10 +40,10 @@
                         </tbody>
                     </table>
 
-                {# display navigation #}
-                <div class="navigation">
-                    {{ knp_pagination_render(pagination) }}
-                </div>
+                    {# display navigation #}
+                    <div class="navigation">
+                        {{ knp_pagination_render(pagination) }}
+                    </div>
                 </div>
             <div class="col-md-6"></div>
         </div>
