--- a/src/School/UserBundle/Resources/views/Admin/AssignStudents.html.twig
+++ b/src/School/UserBundle/Resources/views/Admin/AssignStudents.html.twig
@@ -10,8 +10,9 @@
 {% block body %}
 {{ parent() }}
 <div class="container-fluid">
-
-    <h2> Student Assignment </h2><br/>
+    <div class="page-header">
+        <h2> Student Assignment </h2>
+    </div>
     
     {% for flashMessage in app.session.flashbag.get('notice') %}
         <div class="alert alert-danger">
