--- a/src/School/UserBundle/Resources/views/Admin/AssignTeachers.html.twig
+++ b/src/School/UserBundle/Resources/views/Admin/AssignTeachers.html.twig
@@ -10,7 +10,9 @@
 {% block body %}
 {{ parent() }}
 <div class="container-fluid">
-    <h2> Teacher assignment </h2>
+    <div class="page-header">
+        <h2> Teacher assignment </h2>
+    </div>
     
     {% for flashMessage in app.session.flashbag.get('notice') %}
         <div class="alert alert-success">
