--- a/src/School/UserBundle/Resources/views/Admin/ListUsers.html.twig
+++ b/src/School/UserBundle/Resources/views/Admin/ListUsers.html.twig
@@ -1,19 +1,23 @@
 {% extends 'SchoolUserBundle::base.html.twig' %}
 
-{% block title %}List of Users{% endblock %}
+{% block title %} Users {% endblock %}
+
 {% block body %}
 {{ parent() }}
 <div class="container-fluid">
     
+    <div class="page-header">
+        <h2> Users </h2>
+    </div>
+    
     {% for flashMessage in app.session.flashbag.get('notice') %}
         <div class="alert alert-success" role="alert">
-        {{ flashMessage }}
+        <span class="glyphicon glyphicon-ok"> </span> {{ flashMessage }}
         </div>
     {% endfor %}
             
     <div class="row">
         <div class="col-md-8">
-            <h2>List of Users </h2>
             <table class="table table-hover">
                 <thead>
                     <tr>
@@ -45,6 +49,7 @@
             <div class="navigation">
                 {{ knp_pagination_render(pagination) }}
             </div>
+            
         </div>
         <div class="col-md-6"></div>
     </div>
