--- a/src/School/UserBundle/Resources/views/Admin/StudentAssignmentSelection.html.twig
+++ b/src/School/UserBundle/Resources/views/Admin/StudentAssignmentSelection.html.twig
@@ -10,8 +10,9 @@
 {% block body %}
 {{ parent() }}
 <div class="container-fluid">
-
-    <h2> Assign students to a class </h2>
+    <div class="page-header">
+        <h2> Assign students to a class </h2>
+    </div>
     
     <div class="panel panel-default">
         <div class="panel-heading">
