--- a/src/School/UserBundle/Resources/views/Menu/knp_menu.html.twig
+++ b/src/School/UserBundle/Resources/views/Menu/knp_menu.html.twig
@@ -18,7 +18,7 @@
 {# building the class of the item #}
     {%- set classes = item.attribute('class') is not empty ? [item.attribute('class')] : [] %}
     {%- if matcher.isCurrent(item) %}
-        {%- set classes = classes|merge([options.currentClass]) %}
+        {%- set classes = classes|merge(['active']) %}
     {%- elseif matcher.isAncestor(item, options.depth) %}
         {%- set classes = classes|merge([options.ancestorClass]) %}
     {%- endif %}
@@ -102,7 +102,7 @@
             <i class="{{ item.attribute('icon') }}"></i>
         {% endif %}
         {{ block('label') }}
-        <b class="caret"></b>
+        <span class="caret"></span>
     </a>
 {% endblock %}
  
