--- a/src/School/UserBundle/Resources/views/Student/StudentProfile.html.twig
+++ b/src/School/UserBundle/Resources/views/Student/StudentProfile.html.twig
@@ -9,7 +9,9 @@
 
 {% block body %}
     <div class="container-fluid">
-        <h3> My Profile </h3>
+        <div class="page-header">
+            <h2> My Profile </h2>
+        </div>
         
         <ul>
             <li> <strong> Full Name: </strong> {{ student.user.lastName }} {{ student.user.firstName }} </li>
