--- a/src/School/UserBundle/Resources/views/Teacher/AddExam.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/AddExam.html.twig
@@ -10,12 +10,14 @@
 
 {% block body %}
 <div class="container-fluid">
-    <h3> Add an exam for course: {{ course.name }}</h3>
+    <div class="page-header">
+        <h2> Add an exam <small> {{ course.name }} </small> </h2>
+    </div>
     
     
     {{ form_start(form) }}    
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-6">
                 <div class="form-group">
                     {{ form_label(form.name, 'Exam Name') }}
                     {{ form_errors(form.name) }}
