--- a/src/School/UserBundle/Resources/views/Teacher/AddLecture.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/AddLecture.html.twig
@@ -22,7 +22,9 @@
 
 {% block body %}
 <div class="container-fluid">
-    <h3> Add/Remove Lectures for {{ course.name }} </h3>
+    <div class="page-header" style="border-bottom: none">
+        <h2> {{ course.name }} <small> Add/Remove Lectures </small> </h2>
+    </div>
 
     {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}       
               
@@ -56,7 +58,7 @@
                         </td>
                         
                         <td class="delete-link-wrapper" style="border-top: none">
-                            <div class="col-sm-2"
+                            <div class="col-sm-2">
                             </div>
                         </td>   
                     </tr> 
