--- a/src/School/UserBundle/Resources/views/Teacher/Index.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/Index.html.twig
@@ -1,21 +1,56 @@
 {% extends 'SchoolUserBundle::base.html.twig' %}
 
-{% block title %}Courses{% endblock %}
+{% block title %} Lectures {% endblock %}
 
 
 {% block body %}
 <div class="container-fluid">
-    <h3> Courses </h3>
- 
-    <ul>
-    {% for course in courses %}
-        <li> {{ course.name }} - {{ course.schoolYear }} <a href="{{ path('teacher_add_lecture', {'courseId': course.id }) }}"> (Add Lecture) </a>  </li>
-            <ul> 
-            {% for lecture in  course.lectures %}
-                <li>   <a href="{{ asset(lecture.getWebPath()) }}"> {{ lecture }} </a></li>
+    <div class="page-header">
+        <h2> Lectures </h2>
+    </div>
+    
+    <div class="row">
+        <div class="panel-group col-md-6" id="accordion">
+            {% for course in courses %}
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                    
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#{{ course.id }}">
+                                {{ course.name }}
+                            </a>
+                            <small> 
+                                <a href="{{ path('teacher_add_lecture', {'courseId': course.id }) }}" class="pull-right">  Add Lecture 
+                                    <span class="glyphicon glyphicon-plus-sign"> </span>
+                                </a> 
+                            </small> 
+                        </h4>
+                        
+                    </div>
+                    <div id="{{ course.id }}" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <ul class="list-unstyled">
+                            {% for lecture in course.lectures %}
+                                <li> 
+                                    {{ lecture }} -  
+                                    <a href="{{ asset(lecture.getWebPath()) }}"> Download <span class="glyphicon glyphicon-download-alt"> </span></a>
+                                </li>
+                            {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             {% endfor %}
-            </ul>
-    {% endfor %}
-    </ul>
+        </div>
+    </div>
+
 </div>   
+{% endblock %}
+
+{% block javascripts %}
+<script type="text/javascript">
+    $(function () {
+        $('#courses a:first').tab('show')
+    })
+</script>
 {% endblock %}
