--- a/src/School/UserBundle/Resources/views/Teacher/ListExams.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/ListExams.html.twig
@@ -4,10 +4,13 @@
 
 {% block body %}
 <div class="container-fluid">
-    <h3> Exams for {{ course.name }} - {{ class.name }}</h3>
+    <div class="page-header">
+        <h2> Exams for {{ course.name }} <small> {{ class.name }} </small></h2>
+    </div>
+    
     
     <p class="text-right">
-        <a href="{{ path('teacher_add_exam', { 'course_id': course.id, 'class_id': class.id }) }}"> Add an exam </a>
+        <a href="{{ path('teacher_add_exam', { 'course_id': course.id, 'class_id': class.id }) }}" class="btn btn-default" role="button"> Add new exam </a>
     </p>
     
     <table class="table table-hover">
