--- a/src/School/UserBundle/Resources/views/Teacher/RemoveExam.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/RemoveExam.html.twig
@@ -4,8 +4,9 @@
 
 {% block body %}
 <div class="container-fluid">
-
-    <h3> Remove exam "{{ exam.name }}" </h3>
+    <div class="page-header">
+        <h2> Remove exam "{{ exam.name }}" </h2>
+    </div>
     
     <p> <strong> Exam Questions: </strong> </p>
     
