--- a/src/School/UserBundle/Resources/views/base.html.twig
+++ b/src/School/UserBundle/Resources/views/base.html.twig
@@ -8,7 +8,8 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         
         {% block stylesheets %}
-            <link rel="stylesheet" href="{{ asset('bundles/schooluser/vendor/bootstrap/css/bootstrap.css') }}" />       
+            <link rel="stylesheet" href="{{ asset('bundles/schooluser/vendor/bootstrap/css/bootstrap.css') }}" />
+            <link rel="stylesheet" href="{{ asset('bundles/schooluser/vendor/bootstrap/css/bootstrap-theme.min.css') }}" />
         {% endblock %}
         
         {% block header_javascripts %}
@@ -21,7 +22,7 @@
     </head>
     <body>
         {% block menu %}  
-            
+           
             <nav class="navbar navbar-default" role="navigation">
                 <div class="container-fluid">
                     <!-- Brand and toggle get grouped for better mobile display -->
