--- a/src/School/UserBundle/Resources/views/Login/login.html.twig
+++ b/src/School/UserBundle/Resources/views/Login/login.html.twig
@@ -1,12 +1,10 @@
 {% extends 'SchoolUserBundle::base.html.twig' %}
 
 {% block body %}
-{% if error %}
-    <div>{{ error.message }}</div>
-{% endif %}
-
-<div class="container-fluid">
-    <h2>Login</h2>
+    
+    <div class="page-header">
+        <h2>Login</h2>
+    </div>
 
     <form action="{{ path('login_check') }}" method="post" class="form-inline">
         <div class="form-group">
@@ -18,13 +16,21 @@
             <label for="password" class="sr-only">Password:</label>
             <input type="password" class="form-control" id="password" name="_password" placeholder="Password"/>
         </div>   
-            {#
-                If you want to control the URL the user
-                is redirected to on success (more details below)
-                <input type="hidden" name="_target_path" value="/account" />
-            #}
-            
-            <button type="submit" class="btn btn-default"> login </button>
+        {#
+            If you want to control the URL the user
+            is redirected to on success (more details below)
+            <input type="hidden" name="_target_path" value="/account" />
+        #}
+        
+        <button type="submit" class="btn btn-default"> login </button>
     </form>
-</div>
+
+
+            {% if error %}
+                <div>
+                    <p class="text-danger"> {{ error.message }} </p>
+                </div>
+            {% endif %}
+       
+
 {% endblock %}
