--- a/src/School/UserBundle/Resources/views/Login/register.html.twig
+++ b/src/School/UserBundle/Resources/views/Login/register.html.twig
@@ -13,9 +13,12 @@
 {% endblock %}
 
 {% block title %} Register {% endblock %}
+
 {% block body %}
-    <div class="container-fluid">
-        <h2>Register</h2>
+        
+        <div class="page-header">
+            <h2>Register</h2>
+        </div>
         
         {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
             
@@ -93,8 +96,7 @@
             </div>
 
         {{ form_end(form) }}
-        
-    </div>    
+  
 {% endblock %}
 
 
