--- a/src/School/UserBundle/Resources/views/Teacher/StudentProfile.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/StudentProfile.html.twig
@@ -3,7 +3,7 @@
 {% block title %} Student Profile {% endblock %}
 
 {% block body %}
-    <div class="container-fluid">
+    <div class="container">
         <h3> Profile for {{ student.user.lastName }} {{ student.user.firstName }} </h3>
     </div>
 {% endblock %}
