--- a/src/School/UserBundle/Resources/views/Teacher/Index.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/Index.html.twig
@@ -14,29 +14,32 @@
             {% for course in courses %}
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                    
                         <h4 class="panel-title">
                             <a data-toggle="collapse" data-parent="#accordion" href="#{{ course.id }}">
                                 {{ course.name }}
-                            </a>
-                            <small> 
-                                <a href="{{ path('teacher_add_lecture', {'courseId': course.id }) }}" class="pull-right">  Add Lecture 
-                                    <span class="glyphicon glyphicon-plus-sign"> </span>
+                            </a> <span class="badge">{% if course.lectures|length > 0 %}{{ course.lectures|length }}{% endif %}</span>
+                            <div class="pull-right">
+                                <a href="{{ path('teacher_add_lecture', {'courseId': course.id }) }}"> 
+                                    <small> Add Lecture 
+                                        <span class="glyphicon glyphicon-plus-sign"> </span> 
+                                    </small>
                                 </a> 
-                            </small> 
+                            </div>
                         </h4>
                         
                     </div>
                     <div id="{{ course.id }}" class="panel-collapse collapse">
                         <div class="panel-body">
-                            <ul class="list-unstyled">
+                            {# <ul class="list-unstyled"> #}
+                            <table class="table table-noborder">
                             {% for lecture in course.lectures %}
-                                <li> 
-                                    {{ lecture }} -  
-                                    <a href="{{ asset(lecture.getWebPath()) }}"> Download <span class="glyphicon glyphicon-download-alt"> </span></a>
-                                </li>
+                                 <tr>
+                                    <td> {{ lecture }}  </td> 
+                                    <td class="text-right"> <a href="{{ asset(lecture.getWebPath()) }}"> Download <span class="glyphicon glyphicon-download-alt"> </span></a> </td>
+                                </tr>
                             {% endfor %}
-                            </ul>
+                            </table>
+                            {# </ul> #}
                         </div>
                     </div>
                 </div>
