--- a/src/School/UserBundle/Resources/views/Teacher/ListExams.html.twig
+++ b/src/School/UserBundle/Resources/views/Teacher/ListExams.html.twig
@@ -9,11 +9,11 @@
     </div>
     
     
-    <p class="text-right">
-        <a href="{{ path('teacher_add_exam', { 'course_id': course.id, 'class_id': class.id }) }}" class="btn btn-default" role="button"> Add new exam </a>
+    <p class="text-right spacer-bottom">
+        <a href="{{ path('teacher_add_exam', { 'course_id': course.id, 'class_id': class.id }) }}" class="btn btn-default" role="button" > Add new exam </a>
     </p>
     
-    <table class="table table-hover">
+    <table class="table table-hover spacer-bottom">
         <thead>
             <tr>
                 <th> Exam </th>
@@ -73,10 +73,8 @@
             <div class="col-sm-4">
                 {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
             </div>
-        </div>
-        
-        <div class="form-group">
-            <div class="col-sm-offset-1 col-sm-4">
+
+            <div class="col-sm-4">
                 {{ form_widget(form.Assign, {'attr': {'class': 'btn btn-default'}}) }}
             </div>
         </div>        
